Fixed menu scroll on mobile view.

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ img {
   color: black;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 /* /CLASSES */
 /* /GENERAL */
 /* HEADER */
