--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -68,6 +68,9 @@ img {
     color: black;
   }
 }
+.no-scroll {
+  overflow: hidden;
+}
 /* /CLASSES */
 /* /GENERAL */
 /* HEADER */
